--- a/config/corne.conf
+++ b/config/corne.conf
@@ -30,11 +30,11 @@
 ### Keyboard name
 # CONFIG_ZMK_KEYBOARD_NAME="Nice Corne View"
 # CONFIG_ZMK_KEYBOARD_NAME="Puchi Corne View"
-# CONFIG_ZMK_KEYBOARD_NAME="Nice Corne Oled"
+CONFIG_ZMK_KEYBOARD_NAME="Nice Corne Oled"
 # CONFIG_ZMK_KEYBOARD_NAME="Puchi Corne Oled"
 
 ### Boost Bluetooth TX power, also make Bluetooth stronger
-# CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 # Tune bluetooth profiles for quick select
 # CONFIG_BT_MAX_CONN=3
 
@@ -82,7 +82,7 @@
 # CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
 ### OLED Display
-# CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_DISPLAY=y
 # esto creo que ya no es necesario
 # CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 # CONFIG_ZMK_DISPLAY_STATUS_SCREEN_BUILT_IN=y
